adjusting the add button on sm scren

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
         <form>
             <input type="text" placeholder="Enter a task" id="task">
-            <input type="submit" value="Add" id="submit">
+            <input type="submit" value="+" id="submit">
         </form>
     </div>
 </body>
